--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -84,8 +84,8 @@
               </a>
             </div>
             <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/corto_screen1.png" alt="Screenshot of contact form code" class="rounded-lg shadow-lg max-w-full">
-              <img src="img/corto_screen2.png" alt="Screenshot of home page" class="rounded-lg shadow-lg max-w-full">
+              <img src="img/corto_screen1.png" alt="Screenshot of contact form code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+              <img src="img/corto_screen2.png" alt="Screenshot of home page" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
             </div>
           </div>
           <hr data-type="freelance">
@@ -104,13 +104,13 @@
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
                 Live Demo
               </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-main">
+              <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" target="_blank" class="btn-main">
                 View Code
               </a></button>
             </div>
             <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-full">
-              <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-full">
+              <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+              <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
             </div>
           </div>
           <hr data-type="university">
@@ -129,13 +129,13 @@
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
                 Live Demo
               </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---ML-CA1" class="btn-main">
+              <button><a href="https://github.com/anaisbl/TUD---ML-CA1" target="_blank" class="btn-main">
                 View Code
               </a></button>
             </div>
             <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-full">
-              <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg max-w-full">
+              <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+              <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
             </div>
           </div>
           <hr data-type="university">
@@ -156,13 +156,13 @@
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
                 Live Demo
               </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-main">
+              <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" target="_blank" class="btn-main">
                 View Code
               </a></button>
             </div>
             <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-full">
-              <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-full">
+              <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+              <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
             </div>
           </div>
           <hr data-type="university">
@@ -186,13 +186,13 @@
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
                 Live Demo
               </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" class="btn-main">
+              <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" target="_blank" class="btn-main">
                 View Code
               </a></button>
             </div>
             <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg max-w-full">
-              <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg max-w-full">
+              <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+              <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
             </div>
           </div>
           <hr data-type="university">
