--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -211,18 +211,26 @@
           <p>Copyright © 2025 - All right reserved to Nana</p>
           <nav>
               <div class="grid grid-flow-col gap-5 pb-2">
-                <a href="index.html" class="inline-block text-xl social-link">
-                  <img width="50" height="50" src="icons/icons8-home-100-green.png" alt="Home button"/>
-                </a>
-                <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-email-100-green.png" alt="Email" />
-                </a>
-                <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-github-100-green.png" alt="Github" />
-                </a>
-                <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
-                </a>
+                <div class="lg:tooltip" data-tip="Home">
+                  <a href="index.html" class="inline-block text-xl social-link">
+                    <img width="50" height="50" src="icons/icons8-home-100-green.png" alt="Home button"/>
+                  </a>
+                </div>
+                <div class="lg:tooltip" data-tip="Email">
+                  <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+                  <img width="50" height="50" src="icons/icons8-email-100-green.png" alt="Email" />
+                  </a>
+                </div>
+                <div class="lg:tooltip" data-tip="Github">
+                  <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
+                  <img width="50" height="50" src="icons/icons8-github-100-green.png" alt="Github" />
+                  </a>
+                </div>
+                <div class="lg:tooltip" data-tip="Linkedin">
+                  <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
+                  <img width="50" height="50" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
+                  </a>
+                </div>
               </div>
             </nav>
         </aside>
