--- a/code/public/index.html
+++ b/code/public/index.html
@@ -74,15 +74,21 @@
 
         <!--Contact buttons-->
         <div class="space-x-8 flex justify-center">
-          <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-            <img width="100" height="100" src="icons/icons8-email-100-green.png" alt="Email" />
-          </a>
-          <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-            <img width="100" height="100" src="icons/icons8-github-100-green.png" alt="Github" />
-          </a>
-          <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-            <img width="100" height="100" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
-          </a>
+          <div class="lg:tooltip" data-tip="Email">
+            <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+              <img width="100" height="100" src="icons/icons8-email-100-green.png" alt="Email" />
+            </a>
+          </div>
+          <div class="lg:tooltip" data-tip="Github">
+            <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
+              <img width="100" height="100" src="icons/icons8-github-100-green.png" alt="Github" />
+            </a>
+          </div>
+          <div class="lg:tooltip" data-tip="Linkedin">
+            <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
+              <img width="100" height="100" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" />
+            </a>
+          </div>
         </div>
         
         <div class="divider divider-secondary pt-10">Get to know me</div>
