--- a/code/public/index.html
+++ b/code/public/index.html
@@ -63,14 +63,14 @@
         <!--Header introduction-->
         <h4 class="text-lg text-secondary-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
-        <div class="divider divider-secondary py-4">Work</div>
+        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Work</div>
         <div class="mb-6 flex flex-wrap justify-center gap-4">
           <button class="btn-main"><a href="cs.html">View CS projects</a></button>
           <button class="btn-main"><a href="art.html">View Art projects</a></button>
           <button class="btn-main"><a href="img/cv.pdf" target="_blank">View my CV</a></button>
         </div>
 
-        <div class="divider divider-secondary py-4">Socials</div>
+        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Socials</div>
 
         <!--Contact buttons-->
         <div class="space-x-8 flex justify-center">
@@ -91,7 +91,7 @@
           </div>
         </div>
         
-        <div class="divider divider-secondary pt-10">Get to know me</div>
+        <div class="divider divider-secondary pt-10 w-full max-w-6xl mx-auto">Get to know me</div>
         <!--About section-->
         <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
           <h2 id="about" class="text-2xl font-extrabold text-primary mb-6">Why art and computer science?</h2>
