--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -7,7 +7,7 @@
         <!--Icons by Icons8-->
         <title>Anaïs | CS Projects</title>
     </head>
-    <body class="bg-base-200 fade-transition">
+    <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
       <style>
         /* Hiding the navbar on the main page because if i remove the chunk of code everything disappears and idk why*/
         .navbar {
@@ -16,7 +16,7 @@
       </style>
 
       <!--full body container for responsivness & centering-->
-      <div class="flex flex-col items-center justify-center">
+      <div class="flex-grow flex flex-col items-center justify-center">
 
         <!--Navbar-->
         <div class="w-full mb-8">
