--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -18,6 +18,19 @@
       <!--full body container for responsivness & centering-->
       <div class="flex-grow flex flex-col items-center justify-center">
 
+        <!-- Floating button -->
+        <div class="fixed bottom-10 right-6 z-50">
+          <div class="dropdown dropdown-left dropdown-hover">
+            <label tabindex="0" class="btn btn-circle btn-primary hover:scale-110">
+              <img src="icons/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10"/>
+            </label>
+            <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="art.html">Art</a></li>
+            </ul>
+          </div>
+        </div>
+
         <!--Navbar-->
         <div class="w-full mb-8">
           <div class="navbar bg-secondary mx-auto py-2 flex justify-between items-center">
