--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="dist/style.css" rel="stylesheet">
+
+        <!-- Link to the external JavaScript file -->
+        <script src="main.js" defer></script>
+
         <!--Icons by Icons8-->
         <title>Anaïs | Home</title>
     </head>
@@ -50,10 +54,29 @@
           </div>
         </div>
 
+        <!--Light/Dark mode button-->
+        <label class="grid cursor-pointer place-items-center fixed top-4 right-4">
+          <input
+            type="checkbox"
+            value="synthwave"
+            class="toggle theme-controller bg-base-content col-span-2 col-start-1 row-start-1"
+            onclick="toggleTheme()" />
+          <img
+            src="https://img.icons8.com/?size=100&id=67709&format=png&color=000000"
+            class="col-start-1 row-start-1"
+            width="20"
+            alt="Light Mode Icon" />
+          <img
+            src="https://img.icons8.com/?size=100&id=67639&format=png&color=000000"
+            class="col-start-2 row-start-1"
+            width="20"
+            alt="Dark Mode Icon" />
+        </label>
+
         <!--Header image-->
         <div class="avatar">
           <div class="avatar-styling">
-            <img src="img/profile2.jpg" class="w-full h-full rounded-full"/>
+            <img id="avatar" src="img/profile2.jpg" class="w-full h-full rounded-full"/>
           </div>
         </div>
 
@@ -76,17 +99,17 @@
         <div class="space-x-8 flex justify-center">
           <div class="lg:tooltip" data-tip="Email">
             <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/icons8-email-100-green.png" alt="Email" class="animated-icon"/>
+              <img width="100" height="100" src="icons/dark/icons8-email-100-green.png" alt="Email" class="animated-icon social-email"/>
             </a>
           </div>
           <div class="lg:tooltip" data-tip="Github">
             <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/icons8-github-100-green.png" alt="Github" class="animated-icon"/>
+              <img width="100" height="100" src="icons/dark/icons8-github-100-green.png" alt="Github" class="animated-icon social-github"/>
             </a>
           </div>
           <div class="lg:tooltip" data-tip="Linkedin">
             <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/icons8-linkedin-100-green.png" alt="Linkedin" class="animated-icon"/>
+              <img width="100" height="100" src="icons/dark/icons8-linkedin-100-green.png" alt="Linkedin" class="animated-icon social-linkedin"/>
             </a>
           </div>
         </div>
@@ -126,27 +149,24 @@
 
       </div>
 
-      <footer class="footer footer-center bg-secondary text-primary-content p-2">
+      <footer class="footer footer-center bg-secondary p-2">
         <aside>
-          <p class="text-primary">Copyright © 2025 - All right reserved to Nana</p>
+          <p class="text-primary-content">Copyright © 2025 - All right reserved to Nana</p>
           <nav>
             <div class="grid grid-flow-col gap-5 pb-2">
               <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-email-100-brown.png" alt="Email" />
+                <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
               </a>
               <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-github-100-brown.png" alt="Github" />
+                <img class="social-github" width="50" height="50" src="icons/dark/icons8-github-100-green.png" alt="Github" />
               </a>
               <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-                <img width="50" height="50" src="icons/icons8-linkedin-100-brown.png" alt="Linkedin" />
+                <img class="social-linkedin" width="50" height="50" src="icons/dark/icons8-linkedin-100-green.png" alt="Linkedin" />
               </a>
             </div>
           </nav>
         </aside>
       </footer>
-
-    <!-- Link to the external JavaScript file -->
-    <script src="main.js"></script>
 
     </body>
 </html>
