--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,11 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="dist/style.css" rel="stylesheet">
-
-        <!-- Link to the external JavaScript file -->
         <script src="main.js" defer></script>
 
-        <!--Icons by Icons8-->
+        <!--All Icons by Icons8-->
         <title>Anaïs | Home</title>
     </head>
     <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
@@ -34,7 +32,7 @@
             <!-- Hamburger Icon for Mobile (visible on small screens) -->
             <div class="block md:hidden">
               <button id="hamburger-btn" class="text-gray-200">
-                <img src="icons/icons8-hamburger-menu-100-green.png" alt="Hamburger Menu" class="h-10 w-10 hover:scale-125 transition-all duration-300"/>
+                <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Hamburger Menu" class="h-10 w-10 hover:scale-125 transition-all duration-300 bubble-float"/>
               </button>
             </div>
   
