--- a/code/public/index.html
+++ b/code/public/index.html
@@ -84,14 +84,14 @@
         <!--Header introduction-->
         <h4 class="text-lg text-secondary-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
-        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Work</div>
+        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Main</div>
         <div class="mb-6 flex flex-wrap justify-center gap-4">
-          <button class="btn-main"><a href="cs.html">View CS projects</a></button>
-          <button class="btn-main"><a href="art.html">View Art projects</a></button>
+          <button class="btn-main"><a href="cs.html">Computer science</a></button>
+          <button class="btn-main"><a href="art.html">Art</a></button>
           <button class="btn-main"><a href="img/cv.pdf" target="_blank">View my CV</a></button>
         </div>
 
-        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Socials</div>
+        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Connect</div>
 
         <!--Contact buttons-->
         <div class="space-x-8 flex justify-center">
@@ -112,11 +112,11 @@
           </div>
         </div>
         
-        <div class="divider divider-secondary pt-10 w-full max-w-6xl mx-auto">Get to know me</div>
+        <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Get to know me</div>
         <!--About section-->
-        <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
+        <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-100 p-8 rounded-lg shadow-lg">
           <h2 id="about" class="text-2xl font-extrabold text-primary mb-6">Why art and computer science?</h2>
-          <p class="text-lg mb-6 leading-relaxed text-secondary-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or image. While I chose not to pursue formal education in art and keep it as a personal passion, in my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
+          <p class="text-lg mb-6 leading-relaxed text-secondary-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or imagine. While I chose not to pursue formal education in art, I kept it as a personal passion. In my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
           <div class="carousel rounded-box max-w-full mb-6">
             <div class="carousel-item w-full">
               <img
@@ -125,7 +125,7 @@
             </div>
           </div>
           
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art and computer science may seem worlds apart, and in some ways, they are. I enjoy how different they are in both content and approach—art fuels my creativity, while computer science challenges the analytical side of my brain. Both let me get "in the zone," whether I'm training a classification model or picking a color palette for a new project. Growing up, I had minimal interest in computers; while I enjoyed learning tips, tricks, and shortcuts, I always thought computer science was out of my reach.</p>
+          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art and computer science may seem worlds apart, and in some ways, they are. I enjoy how different they are in both content and approach. Art fuels my creativity, while computer science challenges the analytical side of my brain. Both let me get "in the zone," whether I'm training a classification model or picking a color palette for a new project. Growing up, I had minimal interest in computers. I enjoyed learning tips, tricks, and shortcuts, but the science behind computers felt so far out of my reach.</p>
 
           <div class="carousel rounded-box max-w-full mb-6">
             <div class="carousel-item w-full">
@@ -135,7 +135,7 @@
             </div>
           </div>
 
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">That changed during the pandemic when I took an elective coding class in the final year of my bachelor's degree. It opened my eyes to the world of computing, and I thought, "So, this is what it's all about!" Five years later, I've earned a master's in computer science, understand OOP, and can deploy my own websites and data science projects. Time has been a great teacher, and I'm proud of how far I've come. I can't wait to look back in 2030 and see how much further I've gone!</p>
+          <p class="text-lg mb-6 leading-relaxed text-accent-content">That changed during the pandemic, when I took an elective coding class in the final year of my bachelor's degree. It opened my eyes to the world of computing, and I thought, "So, this is what it's all about!" <br>Five years later, I've earned a master's in computer science, understand OOP, and can deploy my own websites and data science projects. Time has been a great teacher, and I'm proud of how far I've come. I can't wait to look back in 2030 and see how much further I've gone!</p>
 
           <div class="carousel rounded-box max-w-full">
             <div class="carousel-item w-full">
