Starting restructure of cs page

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,7 +9,7 @@
         <!--All Icons by Icons8-->
         <title>Anaïs | Home</title>
     </head>
-    <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
+    <body class="bg-base-300 fade-transition flex flex-col min-h-screen">
       <style>
         /* Hiding the navbar on the main page because if i remove the chunk of code everything disappears and idk why*/
         .navbar {
@@ -82,7 +82,7 @@
         <h1 class="text-4xl font-extrabold text-primary my-6 text-center">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-secondary-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
+        <h4 class="text-lg text-base-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
         <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Main</div>
         <div class="mb-6 flex flex-wrap justify-center gap-4">
@@ -114,9 +114,9 @@
         
         <div class="divider divider-secondary py-4 w-full max-w-6xl mx-auto">Get to know me</div>
         <!--About section-->
-        <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-100 p-8 rounded-lg shadow-lg">
+        <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
           <h2 id="about" class="text-2xl font-extrabold text-primary mb-6">Why art and computer science?</h2>
-          <p class="text-lg mb-6 leading-relaxed text-secondary-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or imagine. While I chose not to pursue formal education in art, I kept it as a personal passion. In my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
+          <p class="text-lg mb-6 leading-relaxed text-base-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or imagine. While I chose not to pursue formal education in art, I kept it as a personal passion. In my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
           <div class="carousel rounded-box max-w-full mb-6">
             <div class="carousel-item w-full">
               <img
