--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -85,12 +85,104 @@
         </div>
 
         <!--Header title-->
-        <h1 class="text-4xl font-extrabold text-info mb-6 text-center">Computer science projects</h1>
+        <h1 class="text-4xl text-primary font-extrabold font-mono mb-6 text-center">Computer science</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-secondary-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Computer science is an umbrella spanning many, <em>many</em> different disciplines. Something I try to explain to my parents that, "Yes I studied computer science, no I am not capable of building an application like Facebook to become a millionnaire". <br> <br>
-        These projects have been completed as part of university coursework, paid work and personal little projects to keep up my skills and learn more. <br> <br>
-        Some are ongoing (like this website), others have <em>questionable</em> syntax (we live and we learn) and a select few are actually, quite fantastic!</h4>
+        <h2 class="text-xl font-semibold text-secondary text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Explore my journey as I dive into the world of data!</h2>
+
+        <!--Content-->
+        <div class="divider divider-accent py-4 w-full max-w-6xl mx-auto">Qualifications</div>
+        <ul class="timeline timeline-vertical lg:timeline-horizontal">
+          <li>
+            <div class="timeline-start">2017</div>
+            <div class="timeline-middle">
+              <svg xmlns="icons">
+                <path></path>
+              </svg>
+            </div>
+            <div class="timeline-end timeline-box">Graduate highschool - IB Diploma</div>
+            <hr />
+          </li>
+          <li>
+            <hr />
+            <div class="timeline-start">2020</div>
+            <div class="timeline-middle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="h-5 w-5">
+                <path
+                  fill-rule="evenodd"
+                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+            <div class="timeline-end timeline-box">Graduate Bachelors - Bsc in Business Management at ESCP Business</div>
+            <hr />
+          </li>
+          <li>
+            <hr />
+            <div class="timeline-start">2021</div>
+            <div class="timeline-middle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="h-5 w-5">
+                <path
+                  fill-rule="evenodd"
+                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+            <div class="timeline-end timeline-box">Start taking web development courses online</div>
+            <hr />
+          </li>
+          <li>
+            <hr />
+            <div class="timeline-start">2022</div>
+            <div class="timeline-middle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="h-5 w-5">
+                <path
+                  fill-rule="evenodd"
+                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+            <div class="timeline-end timeline-box">Started worked in accounting and logistics at Corto Safaris Ltd</div>
+            <hr />
+          </li>
+          <li>
+            <hr />
+            <div class="timeline-start">2023</div>
+            <div class="timeline-middle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+                class="h-5 w-5">
+                <path
+                  fill-rule="evenodd"
+                  d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                  clip-rule="evenodd" />
+              </svg>
+            </div>
+            <div class="timeline-end timeline-box">Graduate from Computing Certification - TU Dublin</div>
+          </li>
+        </ul>
+
+        <div class="divider divider-accent py-4 w-full max-w-6xl mx-auto">Experience</div>
+        <h4 class="text-lg text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Experience:</h4>
+
+        <div class="divider divider-accent py-4 w-full max-w-6xl mx-auto">Projects</div>
+        <h4 class="text-lg text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Projects:</h4>
+
+
 
         <!--Project filter-->
         <div role="tablist" class="tabs tabs-bordered tabs-lg mt-4 pt-4 flex flex-wrap overflow-x-auto">
