--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -48,6 +48,7 @@
             <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
               <li><a href="index.html">Home</a></li>
               <li><a href="art.html">Art</a></li>
+              <li><a href="img/cv.pdf" target="_blank">CV</a></li>
             </ul>
           </div>
         </div>
