--- a/code/public/art.html
+++ b/code/public/art.html
@@ -41,13 +41,14 @@
 
         <!-- Floating menu -->
         <div class="fixed bottom-10 right-6 z-50">
-          <div class="dropdown dropdown-left dropdown-hover">
+          <div class="dropdown dropdown-top dropdown-end dropdown-hover">
             <label tabindex="0" class="btn btn-circle btn-primary hover:scale-110">
               <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
             </label>
             <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
               <li><a href="index.html">Home</a></li>
-              <li><a href="cs.html">CS</a></li>
+              <li><a href="cs.html">Computer Science</a></li>
+              <li><a href="img/cv.pdf" target="_blank">CV</a></li>
             </ul>
           </div>
         </div>
@@ -97,7 +98,6 @@
 
         <div class="mb-6 flex flex-wrap justify-center gap-4">
             <button class="btn-main"><a href="index.html">Return to Home</a></button>
-            <button class="btn-main"><a href="cs.html">View CS Projects</a></button>
         </div>
 
       </div>
