--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,7 +12,7 @@
     <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
 
       <!--full body container for responsivness & centering-->
-      <div class="flex-grow flex flex-col items-center justify-center w-full">
+      <div class="flex-grow flex flex-col items-center justify-center w-full mt-5">
 
         <!--Light/Dark mode button-->
         <label class="grid cursor-pointer place-items-center fixed top-4 right-4">
